--- a/demo-rest-api/package.json
+++ b/demo-rest-api/package.json
@@ -12,6 +12,7 @@
   "author": "WhatIfWeDigDeeper",
   "license": "MIT",
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
     "express": "^5.1.0"
   }
 }
