--- a/demo-rest-api/package.json
+++ b/demo-rest-api/package.json
@@ -8,23 +8,27 @@
     "start": "node app.js",
     "dev": "node --watch app.js",
     "test": "jest",
+    "test.api": "ts-jest tests/api",
     "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "WhatIfWeDigDeeper",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^9.4.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "axios": "^1.6.7",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "volta": {
+    "node": "20.19.2"
   }
 }
