--- a/demo-rest-api/package.json
+++ b/demo-rest-api/package.json
@@ -15,6 +15,7 @@
   "author": "WhatIfWeDigDeeper",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0"
   },
   "devDependencies": {
