--- a/demo-rest-api/package.json
+++ b/demo-rest-api/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^11.10.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
