--- a/demo-rest-api/package.json
+++ b/demo-rest-api/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.10.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
