--- a/demo-rest-api/package.json
+++ b/demo-rest-api/package.json
@@ -18,7 +18,8 @@
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.10.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
